diseñando y estructurando la segunda pantalla (educacion)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="logo">JUAN ESTEBAN MARIN RINCON</a>
             </div>
             <nav class="nav"> 
-                <a href="html/index.html"><i class="fas fa-home"></i>Inicio</a>
+                <a href="/index.html"><i class="fas fa-home"></i>Inicio</a>
                 <a href="html/educacion.html"><i class="bi bi-building"></i>Educacion</a>
                 <a href="html/experiencia.html"><i class="bi bi-file-bar-graph"></i>Experiencia</a>
             </nav>
