--- a/html/educacion.html
+++ b/html/educacion.html
@@ -4,9 +4,131 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EDUCACION|CURRICULUM</title>
+    <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,500;0,700;1,100&display=swap"
+    rel="stylesheet"
+  />
+    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link 
 </head>
 <body>
-    <h1>Educacion</h1>
+    <header class="header">
+        <div class="menu">
+            <div class="logo">
+                <a href="logo">JUAN ESTEBAN MARIN RINCON</a>
+            </div>
+            <nav class="nav"> 
+                <a href="/index.html"><i class="fas fa-home"></i>Inicio</a>
+                <a href="html/educacion.html"><i class="bi bi-building"></i>Educacion</a>
+                <a href="html/experiencia.html"><i class="bi bi-file-bar-graph"></i>Experiencia</a>
+            </nav>
+            <div class="social">
+                <div>
+                  <a href="#"><i class="fas fa-search"></i></a>
+                </div>
+                <div>
+                  <a href="#"><i class="fas fa-user"></i></a>
+                </div>
+                <div>
+                  <a href="#"><i class="fas fa-shopping-cart"></i></a>
+                </div>
+        </div>
+        <hr>
+    </header>
+    <section class="section">
+        <h2 class="segundo_titulo">Estudios</h2>
+        <table id="tab_educacion" class="tabla_educacion">
+            <thead>
+              <tr>
+                <th scope="col">Año</th>
+                <th scope="col">Institucion</th>
+                <th scope="col">Lugar</th>
+                <th scope="col">Culmino</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>2011</td>
+                <td>Colegio Redentorista</td>
+                <td>Manizales</td>
+                <td>Si</td>
+              </tr>
+              <tr>
+                <td>2017</td>
+                <td>Universidad de Manizales</td>
+                <td>Manizales</td>
+                <td>En proceso</td>
+              </tr>
+              <tr>
+                <td>2018</td>
+                <td>FOCUS</td>
+                <td>Manizales</td>
+                <td>Si</td>
+              </tr>
+              <tr>
+                <td>2020</td>
+                <td>Protalento</td>
+                <td>Remoto</td>
+                <td>No</td>
+              </tr>
+            </tbody>
+          </table>
+        
+    </section>
+    <br>
+    <article>
+        <div class="div-article-padre">
+            <label for="date">Agregar fecha de educacion</label>
+        <input type="date" id="date">
+        <br>
+        <br>
+        <label for="institucion">Institucion:</label>
+        <input type="text">
+        <br>
+        <br>
+        <label for="lugar">Luga: </label>
+        <textarea id="comentari_lugar" cols="20" rows="10"></textarea>
+        <br>
+        <br>
+        <label for="culmino">¿Culmino?</label>
+        <label for="Si_culmino">Si
+            <input type="checkbox" >
+        </label>
+        <label for="Si_culmino">En proceso
+            <input type="checkbox" >
+        </label>
+        <label for="Si_culmino">No
+            <input type="checkbox" >
+        </label>
+        <hr>
+        </div>   
+        
+    </article>
+    <footer>
+        <div class="info_footer">
+            <ul> 
+                <li>
+                    <b>Email:</b>imaes.st@gmail.com
+                </li>
+                <li>
+                    <b>Telefono:</b>+57 302 441 0621
+                </li>
+                <li>
+                    <b>Direccion:</b>Calle 45c #9-19. Altos de Capri. Caldas. Colombia
+                </li>
+            </ul>
+        </div>
+        <div>
+            <h5>@Derechos reservados</h5>
+            <h4>
+                Desarrollado por <a href="https://github.com/imaes11st">
+                    <img src="../img/logo_name.png" alt=""> 
+                </a>
+            </h4>
+        </div>
+    </footer>
 </body>
 </html>
