--- a/html/educacion.html
+++ b/html/educacion.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/all.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <link 
+    <link>
 </head>
 <body>
     <header class="header">
@@ -21,9 +21,9 @@
                 <a href="logo">JUAN ESTEBAN MARIN RINCON</a>
             </div>
             <nav class="nav"> 
-                <a href="/index.html"><i class="fas fa-home"></i>Inicio</a>
+                <a href="../index.html"><i class="fas fa-home"></i>Inicio</a>
                 <a href="html/educacion.html"><i class="bi bi-building"></i>Educacion</a>
-                <a href="html/experiencia.html"><i class="bi bi-file-bar-graph"></i>Experiencia</a>
+                <a href="../html/experiencia.html"><i class="bi bi-file-bar-graph"></i>Experiencia</a>
             </nav>
             <div class="social">
                 <div>
@@ -89,7 +89,7 @@
         <input type="text">
         <br>
         <br>
-        <label for="lugar">Luga: </label>
+        <label for="lugar">lugar: </label>
         <textarea id="comentari_lugar" cols="20" rows="10"></textarea>
         <br>
         <br>
@@ -103,6 +103,7 @@
         <label for="Si_culmino">No
             <input type="checkbox" >
         </label>
+        <button class="boton_confirmar">Confirmar</button>
         <hr>
         </div>   
         
