--- a/html/experiencia.html
+++ b/html/experiencia.html
@@ -4,9 +4,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EXPERIENCIA|CURRICULUM</title>
+    <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,500;0,700;1,100&display=swap"
+    rel="stylesheet"
+  />
+    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link>
 </head>
 <body>
-    <h1>Experiencia</h1>
+    <header class="header">
+        <div class="menu">
+            <div class="logo">
+                <a href="logo">JUAN ESTEBAN MARIN RINCON</a>
+            </div>
+            <nav class="nav"> 
+                <a href="/index.html"><i class="fas fa-home"></i>Inicio</a>
+                <a href="/html/educacion.html"><i class="bi bi-building"></i>Educacion</a>
+                <a href="html/experiencia.html"><i class="bi bi-file-bar-graph"></i>Experiencia</a>
+            </nav>
+            <div class="social">
+                <div>
+                  <a href="#"><i class="fas fa-search"></i></a>
+                </div>
+                <div>
+                  <a href="#"><i class="fas fa-user"></i></a>
+                </div>
+                <div>
+                  <a href="#"><i class="fas fa-shopping-cart"></i></a>
+                </div>
+        </div>
+        <hr>
+    </header>
+    <section class="section">
+        <div class="video">
+            <h2>VIDEO INTERACTIVO</h2>
+            <iframe width="570" height="370" src="https://www.youtube.com/embed/qPuvqm8s6qs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </section>
+    <article>
+        
+    </article>
+    <footer>
+        <div class="info_footer">
+            <ul> 
+                <li>
+                    <b>Email:</b>imaes.st@gmail.com
+                </li>
+                <li>
+                    <b>Telefono:</b>+57 302 441 0621
+                </li>
+                <li>
+                    <b>Direccion:</b>Calle 45c #9-19. Altos de Capri. Caldas. Colombia
+                </li>
+            </ul>
+        </div>
+        <div>
+            <h5>@Derechos reservados</h5>
+            <h4>
+                Desarrollado por <a href="https://github.com/imaes11st">
+                    <img src="../img/logo_name.png" alt=""> 
+                </a>
+            </h4>
+        </div>
+    </footer>
+    
 </body>
 </html>
