--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header"><!--Header pagina principal-->
         <div class="menu">
             <div class="logo">
                 <a href="logo">JUAN ESTEBAN MARIN RINCON</a>
-            </div>
+            </div> <!--Div de navegacion del hearder-->
             <nav class="nav"> 
                 <a href="/index.html"><i class="fas fa-home"></i>Inicio</a>
                 <a href="html/educacion.html"><i class="bi bi-building"></i>Educacion</a>
                 <a href="html/experiencia.html"><i class="bi bi-file-bar-graph"></i>Experiencia</a>
             </nav>
-            <div class="social">
+            <div class="social"><!--Div navegacion social-->
                 <div>
                   <a href="#"><i class="fas fa-search"></i></a>
                 </div>
@@ -34,15 +34,16 @@
                 <div>
                   <a href="#"><i class="fas fa-shopping-cart"></i></a>
                 </div>
+            </div>
         </div>
         <hr>
     </header>
-    <section>
-        <div>
+    <section><!--Section index informacion personal-->
+        <div> <!--Div informacion personal-->
             <h2>Informacion Personal</h2>
             <img src="img/perfil_sin.jpg" width="220" height="200">
         </div>
-        <div>
+        <div><!--Div con lista informacion personal-->
             <ul> 
                 <li>
                     <b>Nombre:</b>Juan Esteban
@@ -60,11 +61,11 @@
         </div>
         <hr>
     </section>
-    <article>
+    <article><!--Article index informacion personal-->
         <div>
             <h2>Informacion de Perfil Profesional</h2>
         </div>
-        <div>
+        <div><!--Div con lista de perfil profesional-->
             <ul> 
                 <li>
                     <b>Perfil:</b>Estudiante, DevWeb, Designer
@@ -79,8 +80,8 @@
         </div>
         <hr>
     </article>
-    <footer>
-        <div class="info_footer">
+    <footer><!--Footer index informacion personal-->
+        <div class="info_footer"><!--Div de informacion de contacto-->
             <ul> 
                 <li>
                     <b>Email:</b>imaes.st@gmail.com
