--- a/html/educacion.html
+++ b/html/educacion.html
@@ -8,24 +8,24 @@
     <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,500;0,700;1,100&display=swap"
     rel="stylesheet"
-  />
-    <link rel="stylesheet" href="/css/styles.css" />
-    <link rel="stylesheet" href="/css/all.min.css" />
+  /><!--Estilo letra-->
+    <link rel="stylesheet" href="/css/styles.css" /><!--css estilos-->
+    <link rel="stylesheet" href="/css/all.min.css" /><!--css icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link>
 </head>
 <body>
-    <header class="header">
-        <div class="menu">
+    <header class="header"><!--Header-->
+        <div class="menu"><!--Div menu-->
             <div class="logo">
                 <a href="logo">JUAN ESTEBAN MARIN RINCON</a>
             </div>
-            <nav class="nav"> 
+            <nav class="nav"> <!--Navegacion-->
                 <a href="../index.html"><i class="fas fa-home"></i>Inicio</a>
                 <a href="html/educacion.html"><i class="bi bi-building"></i>Educacion</a>
                 <a href="../html/experiencia.html"><i class="bi bi-file-bar-graph"></i>Experiencia</a>
             </nav>
-            <div class="social">
+            <div class="social"><!--Div social-->
                 <div>
                   <a href="#"><i class="fas fa-search"></i></a>
                 </div>
@@ -36,11 +36,12 @@
                   <a href="#"><i class="fas fa-shopping-cart"></i></a>
                 </div>
         </div>
-        <hr>
+        <hr><!--Salto de linea-->
     </header>
-    <section class="section">
+    <section class="section"><!--Section-->
         <h2 class="segundo_titulo">Estudios</h2>
-        <table id="tab_educacion" class="tabla_educacion">
+        <table id="tab_educacion" class="tabla_educacion"><!--Tabla de educacion-->
+          <!--th es igual a letra en negrilla y td es igual a letra simple-->
             <thead>
               <tr>
                 <th scope="col">Año</th>
@@ -78,8 +79,8 @@
           </table>
         
     </section>
-    <br>
-    <article>
+    <br><!--Salto de linea-->
+    <article><!--Article añadir educacion-->
         <div class="div-article-padre">
             <label for="date">Agregar fecha de educacion</label>
         <input type="date" id="date">
@@ -90,9 +91,10 @@
         <br>
         <br>
         <label for="lugar">lugar: </label>
-        <textarea id="comentari_lugar" cols="20" rows="10"></textarea>
+        <textarea id="comentari_lugar" cols="20" rows="10"></textarea><!--Text tarea es un anotador de texto-->
         <br>
         <br>
+        <!--Seccion de culminar proceso y confirmar-->
         <label for="culmino">¿Culmino?</label>
         <label for="Si_culmino">Si
             <input type="checkbox" >
@@ -106,9 +108,8 @@
         <button class="boton_confirmar">Confirmar</button>
         <hr>
         </div>   
-        
     </article>
-    <footer>
+    <footer><!--Footer-->
         <div class="info_footer">
             <ul> 
                 <li>
