--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,500;0,700;1,100&display=swap"
     rel="stylesheet"
-  />
-    <link rel="stylesheet" href="/css/styles.css" />
-    <link rel="stylesheet" href="/css/all.min.css" />
+  /><!--Estilo de letra-->
+    <link rel="stylesheet" href="/css/styles.css" /><!--css estilos-->
+    <link rel="stylesheet" href="/css/all.min.css" /><!--css icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 </head>
 <body>
