--- a/html/experiencia.html
+++ b/html/experiencia.html
@@ -8,24 +8,24 @@
     <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,500;0,700;1,100&display=swap"
     rel="stylesheet"
-  />
-    <link rel="stylesheet" href="/css/styles.css" />
-    <link rel="stylesheet" href="/css/all.min.css" />
+  /><!--Letra estilo-->
+    <link rel="stylesheet" href="/css/styles.css" /><!--css estilo-->
+    <link rel="stylesheet" href="/css/all.min.css" /><!--css icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link>
 </head>
 <body>
-    <header class="header">
-        <div class="menu">
+    <header class="header"><!--Header-->
+        <div class="menu"><!--Div menu-->
             <div class="logo">
                 <a href="logo">JUAN ESTEBAN MARIN RINCON</a>
             </div>
-            <nav class="nav"> 
+            <nav class="nav"> <!--navegador-->
                 <a href="/index.html"><i class="fas fa-home"></i>Inicio</a>
                 <a href="/html/educacion.html"><i class="bi bi-building"></i>Educacion</a>
                 <a href="html/experiencia.html"><i class="bi bi-file-bar-graph"></i>Experiencia</a>
             </nav>
-            <div class="social">
+            <div class="social"><!--Div social-->
                 <div>
                   <a href="#"><i class="fas fa-search"></i></a>
                 </div>
@@ -36,19 +36,19 @@
                   <a href="#"><i class="fas fa-shopping-cart"></i></a>
                 </div>
         </div>
-        <hr>
+        <hr><!--Salto de linea-->
     </header>
-    <section class="section">
+    <section class="section"><!--Section-->
         <div class="video">
             <h2>VIDEO INTERACTIVO</h2>
             <iframe width="570" height="370" src="https://www.youtube.com/embed/qPuvqm8s6qs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <!--iframe para reproductor de video-->
         </div>
-        
     </section>
     <article>
-        
+        <!--Falta por llenar el espacio del article-->      
     </article>
-    <footer>
+    <footer><!--Footer-->
         <div class="info_footer">
             <ul> 
                 <li>
