Actualizacion de limpieza de codigo

--- a/html/experiencia.html
+++ b/html/experiencia.html
@@ -46,7 +46,13 @@
         </div>
     </section>
     <article>
-        <!--Falta por llenar el espacio del article-->      
+
+
+        <!--Falta por llenar el espacio del article,
+            buscar algo interesante en internet
+        -->   
+        
+        
     </article>
     <footer><!--Footer-->
         <div class="info_footer">
