--- a/html/experiencia.html
+++ b/html/experiencia.html
@@ -46,7 +46,27 @@
         </div>
     </section>
     <article>
-
+        <h2>Comentarios</h2>
+        <form action="/action_page.php">
+            <div>
+                <h4>¿Que tal te parecio mi pagina?</h4> 
+                <label for="puntaje">De 1 a 5</label>
+                <select name="puntaje" id="puntaje"><!--Dropdown con select-->
+                  <option value="numero">1</option>
+                  <option value="numero">2</option>
+                  <option value="numero">3</option>
+                  <option value="numero">4</option>
+                  <option value="numero">5</option>
+                </select>
+            </div>
+            <br>
+            <div>
+                <label for="lugar">Comentarios</label>
+                <textarea id="box_comentario" cols="20" rows="10"></textarea>
+            </div>
+            <br><br>
+            <input type="submit" value="Submit">
+          </form>
 
         <!--Falta por llenar el espacio del article,
             buscar algo interesante en internet
