--- a/html/experiencia.html
+++ b/html/experiencia.html
@@ -18,7 +18,7 @@
     <header class="header"><!--Header-->
         <div class="menu"><!--Div menu-->
             <div class="logo">
-                <a href="logo">JUAN ESTEBAN MARIN RINCON</a>
+                <a href="../index.html">JUAN ESTEBAN MARIN RINCON</a>
             </div>
             <nav class="nav"> <!--navegador-->
                 <a href="/index.html"><i class="fas fa-home"></i>Inicio</a>
