--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header"><!--Header pagina principal-->
         <div class="menu">
             <div class="logo">
-                <a href="logo">JUAN ESTEBAN MARIN RINCON</a>
+                <a href="index.html">JUAN ESTEBAN MARIN RINCON</a>
             </div> <!--Div de navegacion del hearder-->
             <nav class="nav"> 
                 <a href="/index.html"><i class="fas fa-home"></i>Inicio</a>
