Agregando div para el audio y preparado para comenzar con el css

--- a/html/experiencia.html
+++ b/html/experiencia.html
@@ -44,6 +44,12 @@
             <iframe width="570" height="370" src="https://www.youtube.com/embed/qPuvqm8s6qs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <!--iframe para reproductor de video-->
         </div>
+        <div>
+            <h2>REPRODUCTOR</h2>
+            <audio src="#" controls="controls" type="audio/mpeg" preload="preload">
+            </audio>
+            <!--audio para reproductor de sonido-->
+        </div>
     </section>
     <article>
         <hr>
