--- a/html/experiencia.html
+++ b/html/experiencia.html
@@ -52,11 +52,11 @@
         </div>
     </section>
     <article>
-        <hr>
+        <hr> <!--Articulo de comentarios-->
         <h2>Comentarios</h2>
         <form action="/action_page.php">
             <div>
-                <h4>¿Que tal te parecio mi pagina?</h4> 
+                <h4>¿Que tal te parecio mi pagina?</h4><!--Encuesta-->
                 <label for="puntaje">De 1 a 5</label>
                 <select name="puntaje" id="puntaje"><!--Dropdown con select-->
                   <option value="numero">1</option>
