--- a/index.html
+++ b/index.html
@@ -1,107 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HOME|CURRICULUM</title>
     <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,500;0,700;1,100&display=swap"
-    rel="stylesheet"
-  /><!--Estilo de letra-->
-    <link rel="stylesheet" href="/css/styles.css" /><!--css estilos-->
-    <link rel="stylesheet" href="/css/all.min.css" /><!--css icons-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-</head>
-<body>
-    <header class="header"><!--Header pagina principal-->
-        <div class="menu">
-            <div class="logo">
-                <a href="index.html">JUAN ESTEBAN MARIN RINCON</a>
-            </div> <!--Div de navegacion del hearder-->
-            <nav class="nav"> 
-                <a href="/index.html"><i class="fas fa-home"></i>Inicio</a>
-                <a href="html/educacion.html"><i class="bi bi-building"></i>Educacion</a>
-                <a href="html/experiencia.html"><i class="bi bi-file-bar-graph"></i>Experiencia</a>
-            </nav>
-            <div class="social"><!--Div navegacion social-->
-                <div>
-                  <a href="#"><i class="fas fa-search"></i></a>
-                </div>
-                <div>
-                  <a href="#"><i class="fas fa-user"></i></a>
-                </div>
-                <div>
-                  <a href="#"><i class="fas fa-shopping-cart"></i></a>
-                </div>
-            </div>
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,500;0,700;1,100&display=swap"
+      rel="stylesheet"
+    />
+    <!--Estilo de letra-->
+    <link rel="stylesheet" href="/css/styles.css" />
+    <!--css estilos-->
+    <link rel="stylesheet" href="/css/all.min.css" />
+    <!--css icons-->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+    />
+  </head>
+  <body>
+    <header class="header">
+      <!--Header pagina principal-->
+      <div class="menu">
+        <div class="logo">
+          <a href="index.html">JUAN ESTEBAN MARIN RINCON</a>
         </div>
-        <hr>
+        <!--Div de navegacion del hearder-->
+        <nav class="nav">
+          <a href="/index.html"><i class="fas fa-home"></i>Inicio</a>
+          <a href="html/educacion.html"
+            ><i class="bi bi-building"></i>Educacion</a
+          >
+          <a href="html/experiencia.html"
+            ><i class="bi bi-file-bar-graph"></i>Experiencia</a
+          >
+        </nav>
+        <div class="social">
+          <!--Div navegacion social-->
+          <div>
+            <a href="#"><i class="fas fa-search"></i></a>
+          </div>
+          <div>
+            <a href="#"><i class="fas fa-user"></i></a>
+          </div>
+          <div>
+            <a href="#"><i class="fas fa-shopping-cart"></i></a>
+          </div>
+        </div>
+      </div>
+      <hr />
     </header>
-    <section><!--Section index informacion personal-->
-        <div> <!--Div informacion personal-->
-            <h2>Informacion Personal</h2>
-            <img src="img/perfil_sin.jpg" width="220" height="200">
-        </div>
-        <div><!--Div con lista informacion personal-->
-            <ul> 
-                <li>
-                    <b>Nombre:</b>Juan Esteban
-                </li>
-                <li>
-                    <b>Apellidos:</b>Marin Rincon
-                </li>
-                <li>
-                    <b>Edad:</b>21
-                </li>
-            </ul>
-        </div>
-        <div>
-            <p>Estudiante de ingenieria de sistemas y telecomunicaciones de la Universidad de Manizales, me destaco por mi pasion por el desarrollo web y el diseño iu y ux</p>
-        </div>
-        <hr>
+    <section>
+      <!--Section index informacion personal-->
+      <div>
+        <!--Div informacion personal-->
+        <h2>Informacion Personal</h2>
+        <img src="img/perfil_sin.jpg" width="220" height="200" />
+      </div>
+      <div>
+        <!--Div con lista informacion personal-->
+        <ul>
+          <li><b>Nombre:</b>Juan Esteban</li>
+          <li><b>Apellidos:</b>Marin Rincon</li>
+          <li><b>Edad:</b>21</li>
+        </ul>
+      </div>
+      <div>
+        <p>
+          Estudiante de ingenieria de sistemas y telecomunicaciones de la
+          Universidad de Manizales, me destaco por mi pasion por el desarrollo
+          web y el diseño iu y ux
+        </p>
+      </div>
+      <hr />
     </section>
-    <article><!--Article index informacion personal-->
-        <div>
-            <h2>Informacion de Perfil Profesional</h2>
-        </div>
-        <div><!--Div con lista de perfil profesional-->
-            <ul> 
-                <li>
-                    <b>Perfil:</b>Estudiante, DevWeb, Designer
-                </li>
-                <li>
-                    <b>Idiomas:</b>Ingles(B2), Español Nativo
-                </li>
-                <li>
-                    <b>Estudios:</b>Platzi, Udancity, Udemy, Google Activate, Trailhead
-                </li>
-            </ul>
-        </div>
-        <hr>
+    <article>
+      <!--Article index informacion personal-->
+      <div>
+        <h2>Informacion de Perfil Profesional</h2>
+      </div>
+      <div>
+        <!--Div con lista de perfil profesional-->
+        <ul>
+          <li><b>Perfil:</b>Estudiante, DevWeb, Designer</li>
+          <li><b>Idiomas:</b>Ingles(B2), Español Nativo</li>
+          <li>
+            <b>Estudios:</b>Platzi, Udancity, Udemy, Google Activate, Trailhead
+          </li>
+        </ul>
+      </div>
+      <hr />
     </article>
-    <footer><!--Footer index informacion personal-->
-        <div class="info_footer"><!--Div de informacion de contacto-->
-            <ul> 
-                <li>
-                    <b>Email:</b>imaes.st@gmail.com
-                </li>
-                <li>
-                    <b>Telefono:</b>+57 302 441 0621
-                </li>
-                <li>
-                    <b>Direccion:</b>Calle 45c #9-19. Altos de Capri. Caldas. Colombia
-                </li>
-            </ul>
-        </div>
-        <div>
-            <h5>@Derechos reservados</h5>
-            <h4>
-                Desarrollado por <a href="https://github.com/imaes11st">
-                    <img src="img/logo_name.png" alt=""> 
-                </a>
-            </h4>
-        </div>
+    <footer>
+      <!--Footer index informacion personal-->
+      <div class="info_footer">
+        <!--Div de informacion de contacto-->
+        <ul>
+          <li><b>Email:</b>imaes.st@gmail.com</li>
+          <li><b>Telefono:</b>+57 302 441 0621</li>
+          <li>
+            <b>Direccion:</b>Calle 45c #9-19. Altos de Capri. Caldas. Colombia
+          </li>
+        </ul>
+      </div>
+      <div>
+        <h5>@Derechos reservados</h5>
+        <h4>
+          Desarrollado por
+          <a href="https://github.com/imaes11st">
+            <img src="img/logo_name.png" alt="" />
+          </a>
+        </h4>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
