Limpieza de codigo...

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
         </ul>
       </div>
       <div>
+        <!--Div derechos reservados-->
         <h5>@Derechos reservados</h5>
         <h4>
           Desarrollado por
